--- a/Logave/Base.lproj/Main.storyboard
+++ b/Logave/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8173.3" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="GiB-Zv-qSf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="GiB-Zv-qSf">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8142"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
         <!--Authorization-->
@@ -91,10 +91,10 @@
             </objects>
             <point key="canvasLocation" x="-2801" y="-797"/>
         </scene>
-        <!--View Controller-->
+        <!--Menu Controller-->
         <scene sceneID="GZA-aT-tIp">
             <objects>
-                <viewController id="GiB-Zv-qSf" sceneMemberID="viewController">
+                <viewController id="GiB-Zv-qSf" customClass="MenuController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="xZb-51-J9x"/>
                         <viewControllerLayoutGuide type="bottom" id="kfW-vR-nFz"/>
@@ -135,7 +135,7 @@
                                     <rect key="frame" x="546" y="166" width="47" height="30"/>
                                 </variation>
                                 <connections>
-                                    <segue destination="xWx-bB-kza" kind="show" id="LEM-jp-Bcp"/>
+                                    <action selector="tapOnSignIn:" destination="GiB-Zv-qSf" eventType="touchUpInside" id="ibT-LI-TxL"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -198,6 +198,10 @@
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <segue destination="IIx-uA-0Y1" kind="show" identifier="showMenu" id="uOB-53-HMr"/>
+                        <segue destination="xWx-bB-kza" kind="show" identifier="showAuthMenu" id="eAz-zw-cOu"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oW7-54-baW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -348,7 +352,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dNJ-1y-bQZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2091" y="-1545"/>
+            <point key="canvasLocation" x="-2091" y="-1473"/>
         </scene>
         <!--Logave-->
         <scene sceneID="UEv-yn-Waz">
@@ -454,7 +458,7 @@
             <objects>
                 <tableViewController id="BEL-HD-Ug2" customClass="OrdersViewController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="ATS-OI-eof">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -716,7 +720,7 @@
             <objects>
                 <tableViewController id="RHV-HX-fKL" customClass="DetailedOrderViewController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="kDO-N3-IG2">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -1029,7 +1033,7 @@
                         <viewControllerLayoutGuide type="bottom" id="qHD-AJ-Shj"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="KsU-Wb-e9W">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1272,6 +1276,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="k8H-mG-WTA"/>
+        <segue reference="uOB-53-HMr"/>
     </inferredMetricsTieBreakers>
 </document>
